fix layout breaking long url in post excerpts `overflow-wrap: anywhere`

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:           Evan Mullins
  Author URI:       https://circlecube.com
  Template:         twentynineteen
- Version:          1.9.1
+ Version:          1.9.2
  License:          GNU General Public License v2 or later
  License URI:      http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:      wasmo
@@ -574,7 +574,7 @@ cite span {
 	max-width: calc(100% + 2rem);
 }
 .blog-main article.post p {
-	overflow-wrap: break-word;
+	overflow-wrap: anywhere;
 }
 .entry .post-thumbnail {
 	margin-bottom: 0;
